{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Selection",
            "id": "4892175b-6f7b-43e0-ba52-1fd73f1288df",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "69d8f697-e0d0-45d8-87f3-ac980b79572d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "f3c391d8-3d6e-46a5-b54a-df651b03be96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40f98d74-27f4-4393-aaa3-cd312ea25812",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b3caa3e-4952-44c6-8b70-b07c39950d00",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c650ca8-0418-4bf3-8deb-62d7151db0a3",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f4c0f9c-a266-43d8-8bad-eeafd537ca03",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}